меняет текст на главной странице и стили

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="outlines.css">
+    <link rel="stylesheet" href="style.css">
     <title>Портфолио Junior верстальщика</title>
   </head>
 
@@ -12,7 +12,7 @@
     </header>
 
     <section class="hero-image">
-      <h1 class="heading">Неопознанный Енот</h1>
+      <h1 class="heading">Опознанный Енот</h1>
       <p>Junior верстальщик</p>
     </section>
 
